<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/teal_200"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_quiz_foreground"
        android:background="@color/ic_quiz_background"
        android:layout_marginBottom="38dp"
        android:contentDescription="@string/image_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer_text_view"
        android:text="@string/question_amendments"
        android:padding="8dp"
        android:textColor="@android:color/primary_text_dark_nodisable"
        android:textSize="20sp"
        android:textIsSelectable="false"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="34dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_text"
            android:layout_margin="8dp"
            android:id="@+id/true_button"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_text"
            android:layout_margin="8dp"
            android:id="@+id/false_button"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previous_button"
            android:src="@drawable/baseline_navigate_before_white_24dp"
            android:contentDescription="@string/previous_text"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_button"
            android:src="@drawable/baseline_navigate_next_white_24dp"
            android:contentDescription="@string/next_text"/>


    </LinearLayout>


</LinearLayout>